--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -23,19 +23,32 @@ jobs:
           TOKEN: ${{ secrets.GH_STATS_TOKEN }}
         run: |
           mkdir -p assets
+          # Try with bearer token first
           curl -L "https://github-readme-stats.vercel.app/api?username=adarsh-rajesh&show_icons=true&rank_icon=github&count_private=true&include_all_commits=true&hide_border=false&border_color=A55CFF&title_color=A55CFF&icon_color=A55CFF&text_color=F4F4F6&bg_color=090014" \
-            -H "Authorization: token ${TOKEN}" \
+            -H "Authorization: Bearer ${TOKEN}" \
             -o assets/github-stats.svg
-          echo "GitHub Stats downloaded: $(stat -c%s assets/github-stats.svg) bytes"
+          # Verify file was downloaded
+          if [ -s assets/github-stats.svg ]; then
+            echo "✅ GitHub Stats downloaded successfully ($(wc -c < assets/github-stats.svg) bytes)"
+          else
+            echo "❌ Failed to download stats, retrying without token..."
+            curl -L "https://github-readme-stats.vercel.app/api?username=adarsh-rajesh&show_icons=true&rank_icon=github&count_private=true&include_all_commits=true&hide_border=false&border_color=A55CFF&title_color=A55CFF&icon_color=A55CFF&text_color=F4F4F6&bg_color=090014" \
+              -o assets/github-stats.svg
+          fi
 
       - name: Download Top Languages with Token
         env:
           TOKEN: ${{ secrets.GH_STATS_TOKEN }}
         run: |
           curl -L "https://github-readme-stats.vercel.app/api/top-langs/?username=adarsh-rajesh&layout=compact&hide_border=false&border_color=A55CFF&title_color=A55CFF&text_color=F4F4F6&bg_color=090014&count_private=true&langs_count=8" \
-            -H "Authorization: token ${TOKEN}" \
+            -H "Authorization: Bearer ${TOKEN}" \
             -o assets/top-languages.svg
-          echo "Top Languages downloaded: $(stat -c%s assets/top-languages.svg) bytes"
+          # Verify file was downloaded
+          if [ -s assets/top-languages.svg ]; then
+            echo "✅ Top Languages downloaded successfully ($(wc -c < assets/top-languages.svg) bytes)"
+          else
+            echo "❌ Failed to download languages"
+          fi
 
       - name: Commit and push if changed
         run: |
